NitrOS-9 V3.2.9:

----------------------------------------------------------
2013/01/09 David Ladd
M ChangeLog
M 3rdparty/packages/koronis/makefile

Updated 3rdparty/packages/koronis/makefile to create a becker boot
disk for use with drivewire4 server.

----------------------------------------------------------
2013/01/08 David Ladd
M ChangeLog
M makefile
M rules.mak

Found that primary makefile was not compiling files in the "lib" folder.
Created a NOSLIB label in rules.mak for the full path to "lib" folder.
Replaced the "lib" folder name that was in primary makefile to use
the NOSLIB label to correct the problem with the makefile not branching
into the "lib" folder to compile its files"

----------------------------------------------------------
2013/01/06 David Ladd
M ChangeLog
M level1/dalpha/makefile

Found that LDSKS label was missing from level1/dalpha/makefile
Corrected this oversite and tested.

----------------------------------------------------------
2013/01/06 David Ladd
M ChangeLog
M level1/modules/dwread.asm
M level1/modules/dwwrite.asm
M level1/modules/dw4read.asm
M level1/modules/dw4write.asm

Robert Gault found a problem related to the H6309-1 not always
functioning as expected.  Changed dwread.asm, dwwrite.asm, dw4read.asm
dw4write.asm to reflect these needed changes and movement of code to
correct locations.

In examining the dwwrite.asm source file found two sections of H6309-1 and
code that were the same.  This might have been root problem of the
compiling problems.  Verified both sections of code were identical before
removing second copy.

----------------------------------------------------------
2013/01/05 David Ladd
M ChangeLog
M level1/coco/makefile
M level1/coco/bootfiles/makefile

Added needed sections to makefile(s) to create a NOS9 L1 Beckeer
boot disk.

----------------------------------------------------------
2013/01/04 David Ladd
List of files changed
M ChangeLog
A scripts/burst
